@@ -6,7 +6,8 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.7.2 - 2011-11-
-- 
+- updated French translation (Cédric Frayssinet)
+- fixed some bugs (Thorsten)
 
 Version 2.7.1 - 2011-10-25
 - fixed security issue in bundled ImageManager library (Thorsten)
